<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TuODe2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_okay">Korrekte Eingabe</string>
    <string name="error_name_missing">Texteingabefeld ist leer !</string>
    <string name="title_activity_offene_fragen">Offene Fragen:</string>
    <string name="title_activity_frage_anzeigen">Frage Anzeigen</string>
    <string name="title_activity_fragestellen">Frage stellen:</string>
    

    <string-array name="kategorien">
        <item>(Kategorie auswählen)</item>
        <item>Wirtschaft</item>
        <item>Informatik</item>
        <item>Mathematik</item>
        <item>Sprachen</item>
        <item>Gesundheit</item>
        <item>Gestaltung</item>
    </string-array>
    
     <string-array name="kategorienfilter">
        <item>Alle Kategorien</item>
        <item>Wirtschaft</item>
        <item>Informatik</item>
        <item>Mathematik</item>
        <item>Sprachen</item>
        <item>Gesundheit</item>
        <item>Gestaltung</item>
    </string-array>
     <string name="frage_stellen">Frage stellen</string>
     <string name="offene_fragen">offene Fragen</string>
     <string name="suchen">suchen</string>
     <string name="top_five_fragen">Slider der neuesten Top 5 Fragen</string>
     <string name="absenden">absenden</string>
     <string name="kategorie">Kategorie auswählen</string>
     <string name="beschreibung">Beschreibung der Frage:</string>
     <string name="titel">Titel:</string>
     <string name="frage_anlegen">Neue Frage anlegen</string>
     <string name="antworten">Antwort abschicken</string>
     <string name="neue_antwort">Deine Antwort:</string>
     <string name="alte_antworten">andere Antworten:</string>

    

</resources>
